--- a/index.html
+++ b/index.html
@@ -21,20 +21,138 @@
         </p>
         <ul class="hero__content__combos">
           <li class="hero__content__combos__combo">
-            <img src="/dist/images/logos/disney_star_plus.png" alt="Disney+ - start+">
+            <img
+              src="/dist/images/logos/disney_star_plus.png"
+              alt="Disney+ - start+"
+            />
             <button>Assine Agora</button>
             <span class="text">R$ 49,90/mês*</span>
           </li>
           <li class="hero__content__combos__combo">
-            <img src="/dist/images/logos/disney_star_plus.png" alt="Disney+ - start+">
+            <img
+              src="/dist/images/logos/disney_star_plus.png"
+              alt="Disney+ - start+"
+            />
             <button>Assine Agora</button>
             <span class="text">R$ 49,90/mês*</span>
           </li>
         </ul>
         <p class="text--small">
-          *O preço pode variar caso sua assinatura seja feita atraves de outras plataformas.
+          *O preço pode variar caso sua assinatura seja feita atraves de outras
+          plataformas.
         </p>
       </div>
     </section>
+    <section class="shows">
+      <nav class="shows__tabs">
+          <button data-tab-button="em_breve" class="shows__tabs__button shows__tabs__button--is--active">
+            Em breve
+          </button>
+          <button data-tab-button="populares" class="shows__tabs__button">
+            Mais populares
+          </button>
+          <button data-tab-button="starplus" class="shows__tabs__button">
+            Mais no star+
+          </button>
+      </nav>
+      <ul data-tab-id="em_breve" class="shows__list shows__list--is--active">
+        <li class="shows__list__item">
+          <img src="/dist/images/em_breve/spidey.jpg" alt="spider-man" />
+        </li>
+        <li class="shows__list__item">
+          <img src="/dist/images/em_breve/lobisomem.jpg" alt="lobsomen" />
+        </li>
+        <li class="shows__list__item">
+          <img src="/dist/images/em_breve/desencantada.jpg" alt="desencantada" />
+        </li>
+        <li class="shows__list__item">
+          <img src="/dist/images/em_breve/sem_limites.jpg" alt="sem limites" />
+        </li>
+        <li class="shows__list__item">
+          <img
+            src="/dist/images/em_breve/the_santa_clauses.jpg"alt="santa clauses"/>
+        </li>
+        <li class="shows__list__item">
+          <img src="/dist/images/em_breve/willow.jpg" alt="willow" />
+        </li>
+      </ul>
+
+      <ul data-tab-id="populares" class="shows__list">
+        <li class="shows__list__item">
+          <img src="/dist/images/mais_populares/o_incrivel_dr_pol.jpg" alt="incrivel" />
+        </li>
+        <li class="shows__list__item">
+          <img src="/dist/images/mais_populares/bluey.jpg" alt="lobsomen" />
+        </li>
+        <li class="shows__list__item">
+          <img src="/dist/images/mais_populares/cavaleira_da_lua.jpg" alt="desencantada" />
+        </li>
+        <li class="shows__list__item">
+          <img src="/dist/images/mais_populares/tudo_igual_sqn.jpg" alt="tudo igual" />
+        </li>
+        <li class="shows__list__item">
+          <img
+            src="/dist/images/mais_populares/red.jpg"alt="red"/>
+        </li>
+        <li class="shows__list__item">
+          <img src="/dist/images/mais_populares/obi_wan.jpg" alt="obi wan" />
+        </li>
+      </ul>
+
+      <ul data-tab-id="starplus" class="shows__list">
+        <li class="shows__list__item">
+          <img src="/dist/images/em_breve/spidey.jpg" alt="spider-man" />
+        </li>
+        <li class="shows__list__item">
+          <img src="/dist/images/em_breve/lobisomem.jpg" alt="lobsomen" />
+        </li>
+        <li class="shows__list__item">
+          <img src="/dist/images/em_breve/desencantada.jpg" alt="desencantada" />
+        </li>
+        <li class="shows__list__item">
+          <img src="/dist/images/em_breve/sem_limites.jpg" alt="sem limites" />
+        </li>
+        <li class="shows__list__item">
+          <img
+            src="/dist/images/em_breve/the_santa_clauses.jpg"alt="santa clauses"/>
+        </li>
+        <li class="shows__list__item">
+          <img src="/dist/images/em_breve/willow.jpg" alt="willow" />
+        </li>
+      </ul>
+    </section>
+    <section class="plans">
+      <h2 class="title--big">Escolha seu plano</h2>
+      <ul class="plans__list">
+        <li class="plans__list__item">
+          <img src="/dist/images/logos/disneyplus_underline.png" alt="Disneyplus">
+          <strong class="title--small">27,90/mês*</strong>
+          <p class="text--big">
+            No Disney+ você encontra as ultimas estréias do cinema, originais e clássicos inesqueciveis.
+          </p>
+          <button>Assine agora</button>
+        </li>
+        <li class="plans__list__item">
+          <img src="/dist/images/logos/disney_star_plus_sm.png" alt="Disneyplus">
+          <strong class="title--small">45,90/mês*</strong>
+          <p class="text--big">
+            Assine o Disney+ e star+ juntos. Economize e apreoveite agora os dois serviços por um preço unico.
+          </p>
+          <button>Assine agora</button>
+        </li>
+        <li class="plans__list__item">
+          <img src="/dist/images/logos/disney_star_plus_starzplay_underline.png" alt="Disneyplus">
+          <strong class="title--small">55,90/mês*</strong>
+          <p class="text--big">
+            Disney+, Star+ e STARZPLAY em um plano especial. Assine agora os três serviços juntos.
+          </p>
+          <button>Assine agora</button>
+        </li>
+      </ul>
+      <p class="text--small">
+        *O preço pode variar caso a assinatura seja feita atraves de outras plataformas.
+      </p>
+    </section>
+    <script src="./src/main.js"></script>
   </body>
 </html>
