--- a/index.html
+++ b/index.html
@@ -153,6 +153,154 @@
         *O preço pode variar caso a assinatura seja feita atraves de outras plataformas.
       </p>
     </section>
+    <section class="image-text-section">
+      <img src="/dist/images/tv_pc_tablet_celular.png" alt="imagen com tv, celular e tablet">
+      <div class="image-text-section__text__container">
+        <h2 class="title">Assista do seu jeito</h2>
+        <p class="text--big">
+          Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de títulos em 4K não para de crescer.
+           Além disso, para a felicidade de todos, é possível assistir em até 4 telas ao mesmo tempo.
+        </p>
+      </div>
+    </section>
+    <section class="image-text-section image-text-section--image-full-width">
+      <img src="/dist/images/fundo_rei_leao.png" alt="rei leão">
+      <div class="image-text-section__text__container image-text-section--image-full-width__text__container">
+        <h2 class="title">Baixe filmes e séries</h2>
+        <p class="text--big">
+          Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
+        </p>
+      </div>
+    </section>
+    <section class="available-devices">
+      <h2 class="title">Disponível nos seus dispositivos favoritos</h2>
+      <ul class="available-devices__list">
+        <li class="available-devices__list__item">
+          <img src="./dist/images/dispositivos/computador.png" alt="computador">
+          <h4 class="title--small">Computador</h4>
+          <ul class="text">
+            <li>Chrome OS</li>
+            <li>MacOs</li>
+            <li>PC windowns</li>
+          </ul>
+        </li>
+        <li class="available-devices__list__item">
+          <img src="./dist/images/dispositivos/tv.png" alt="televisao">
+          <h4 class="title--small">TV</h4>
+          <ul class="text">
+            <li>Amazon Fire TV</li>
+            <li>Android TV</li>
+            <li>Apple TV</li>
+            <li>Chromecast</li>
+            <li>Tvs LG</li>
+            <li>Roku</li>
+            <li>Samsung</li>
+          </ul>
+        </li>
+        <li class="available-devices__list__item">
+          <img src="./dist/images/dispositivos/videogames.png" alt="videogames">
+          <h4 class="title--small">videogames</h4>
+          <ul class="text">
+            <li>PS4</li>
+            <li>PS5</li>
+            <li>Xbox One</li>
+            <li>Xbox Series X</li>
+            <li>Xbos Series S</li>
+          </ul>
+        </li>
+        <li class="available-devices__list__item">
+          <img src="./dist/images/dispositivos/celular.png" alt="celular">
+          <h4 class="title--small">Celulares e Tablets</h4>
+          <ul class="text">
+            <li>Tablets Amazon Fire</li>
+            <li>Celulares e Tablets Android</li>
+            <li>Iphone e Ipad</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section class="faq">
+      <h2 class="title">Perguntas frequentes</h2>
+      <ul class="faq__questions">
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            pergunta fi
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            a resposta 
+          </div>
+        </li>
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            pergunta fi
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            a resposta 
+          </div>
+        </li>
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            pergunta fi
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            a resposta 
+          </div>
+        </li>
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            pergunta fi
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            a resposta 
+          </div>
+        </li>
+      </ul>
+    </section>
+    <footer class="footer">
+        <div class="footer__container">
+          <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="">
+        <ul class="footer__links">
+            <li class="footer__links__item">
+              <div class="language-selector">
+              <img src="/dist/images/icones/globe.svg" alt="globo do mundo">
+              <select>
+                <option>English</option>
+                <option selected>Português</option>
+              </select>
+            </div>
+            </li>
+          
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Termos e condições de uso</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Politica de Privacidade</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Proteção de dados no brasil</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Anúncios personalizados</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Dispositivos compativeis</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Ajuda</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Sobre o Disney+</a>
+          </li>
+        </ul>
+          <p class="text--small">
+            ® 2023 Disney, Disney+ e The Walt Disney Company. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+          </p>
+          <p class="text--small">
+            Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda., World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20
+          </p>
+        
+        </div>
+    </footer>
     <script src="./src/main.js"></script>
   </body>
 </html>
